# rusty-retro-messaging

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml
msnp-server/: Cargo.toml  diesel.toml
msnp-server/src/: lib.rs  message.rs  notification_server.rs  schema.rs
rusty-retro-messaging/: .env.example  Cargo.toml  Dockerfile
rusty-retro-messaging/.sqlx/: query-016a4e229c2ac3511bb805bbb1c60f6428321621c2d96402b7032e61873d7681.json  query-03bcf5bb0ee74d460e655e2713e2b4c95bddc003a9ce64f865a5d34fb30f99f9.json  query-06be7895db46b3514e324879a6aebcbdcdf0658a96d6fcb3d84deb0618a9f7d7.json  query-0e5169e3c6fe86c7eb70a0b92c85d0ce7d1052b9fc54cae1b2be429e0c737b3c.json  query-117c12bf23db2d50e879d28c788bc2b157e3ccfe8cbf88a8ae4cd86cdf79b259.json  query-13bd76ee93ae1e0f12a7575c33d274c519472abec42882f9cdf62e90d672b3b6.json  query-1d7bc1999796fae29134b27e7648b569561cc099ef437efd853dfca1b1298782.json  query-32ab918c211c60c8a399b8d3dc3a4cf1f9d5c11503c52a2e16d7e108639e9cd8.json  query-3afce8506ac8868e5d355f4829480445891652b14421af6f415d2eb93ba88e6f.json  query-40066df7ca739e8d534f54dd718892da4e929b13ef9ecea34d913e311f2818ee.json  query-42d099d97c129539471935302bf62b8e9f14852a0c220a98c5ecb16f755aa554.json  query-457bfcd4144d6924c16d64d849e61cdcf2f42ae22f923bc3c4b51db966fbe549.json  query-46e546ca94dcf2b94c9b6f2fd32b2541d2931c62b945c5a82da26e1ea5601cfd.json  query-4ea46ba93ae14f04cada0a9430a357723efe3ff5e667abe56944889c36d3b5fc.json  query-53d0d1c2d70511fe81b07b64507d3988f48da2f77127e1150da8a87a28a742c4.json  query-557fefa247c4a83e591f5609b5fd8364492700aca74281622b61a527edf9b0fa.json  query-56dc50b8f4382998569b91927d83be7b7f0cc7afffff171913f260cbd9da1137.json  (+21 more)
(+293 files in other folders)
