[package]
name = "msnp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
hyper-util = "0.1.10"
tokio = { version = "1", features = ["rt", "io-util", "net", "macros", "sync"] }
tower-service = "0.3.3"
diesel = { version = "2.2.0", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4.40"
regex = "1.11.1"
argon2 = { version = "0.5.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
guid-create = "0.4.1"
