[package]
name = "rusty-retro-messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
hyper-util = "0.1.10"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros", "sync"] }
tower-service = "0.3.3"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "tls-native-tls", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4.40"
regex = "1.11.1"
argon2 = { version = "0.5.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
guid-create = "0.4.1"
rand_distr = { version = "0.5.1", features = ["alloc"] }
rand = { version = "0.9.0", features = ["alloc"] }
base64 = "0.22.1"
tower-http = { version = "0.6.2", features = ["cors"] }
email_address = "0.2.9"
axum-serde = { version = "0.9.0", features = ["xml"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
log = { version = "0.4.27", features = ["std"] }
env_logger = "0.11.8"
